--- a/index.html
+++ b/index.html
@@ -99,13 +99,28 @@ I followed this tutorial here: http://eshepelyuk.github.io/2014/11/06/advanced-j
 I was able to get Jekyll to render Asciidoc.
 
 
+This is a header
+
+
+This is a sample page composed in AsciiDoc.
+Jekyll converts it to HTML using Asciidoctor.
 
 
 
-Note
 
 
-This is a note.
+
+
+
+very important tip
+
+
+
+
+
+sample.rb
+
+puts &quot;Hello, World!&quot;
 
 
 
@@ -168,13 +183,28 @@ I followed this tutorial here: http://eshepelyuk.github.io/2014/11/06/advanced-j
 I was able to get Jekyll to render Asciidoc.
 
 
+This is a header
+
+
+This is a sample page composed in AsciiDoc.
+Jekyll converts it to HTML using Asciidoctor.
 
 
 
-Note
 
 
-This is a note.
+
+
+
+very important tip
+
+
+
+
+
+sample.rb
+
+puts &quot;Hello, World!&quot;
 
 
 
