Publish page-1 index

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <link href="//fonts.googleapis.com/" rel="dns-prefetch">
     <link href="//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
-    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/main.min.css?v=1471896796355"/>
-    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/custom.css?v=1471896796355"/>
-    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/asciidoctor-foundation.css?v=1471896796355"/>
+    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/main.min.css?v=1471896831862"/>
+    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/custom.css?v=1471896831862"/>
+    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/asciidoctor-foundation.css?v=1471896831862"/>
 
 
 
@@ -70,7 +70,7 @@
       GHOSTIUM.enablePjax = typeof enable_pjax !== 'undefined' ? enable_pjax : true;
     </script>
 
-    <script src="//tedbergeron.github.io/themes/ghostium/assets/js/head-scripts.min.js?v=1471896796355"></script>
+    <script src="//tedbergeron.github.io/themes/ghostium/assets/js/head-scripts.min.js?v=1471896831862"></script>
 
     <link rel="canonical" href="https://tedbergeron.github.io/" />
     <meta name="referrer" content="origin" />
@@ -143,7 +143,7 @@ null
   <div  class="cover-image"></div>
   <div class="cover-container">
     <h1 class="cover-title"><a href="https://tedbergeron.github.io" title="Ted Bergeron ">Ted Bergeron </a></h1>
-    <p class="cover-description">Blogging about tech</p>
+    <p class="cover-description">a blog about tech</p>
   </div>
 </aside>
 
@@ -248,7 +248,7 @@ null
         hljs.initHighlightingOnLoad();
       </script>
 
-    <script src="//tedbergeron.github.io/themes/ghostium/assets/js/foot-scripts.min.js?v=1471896796355"></script>
+    <script src="//tedbergeron.github.io/themes/ghostium/assets/js/foot-scripts.min.js?v=1471896831862"></script>
 
 
   </body>
