Publish page-1 index

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <link href="//fonts.googleapis.com/" rel="dns-prefetch">
     <link href="//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
-    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/main.min.css?v=1471896915579"/>
-    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/custom.css?v=1471896915579"/>
-    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/asciidoctor-foundation.css?v=1471896915579"/>
+    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/main.min.css?v=1471897062135"/>
+    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/custom.css?v=1471897062135"/>
+    <link rel="stylesheet" href="//tedbergeron.github.io/themes/ghostium/assets/css/asciidoctor-foundation.css?v=1471897062135"/>
 
 
 
@@ -70,7 +70,7 @@
       GHOSTIUM.enablePjax = typeof enable_pjax !== 'undefined' ? enable_pjax : true;
     </script>
 
-    <script src="//tedbergeron.github.io/themes/ghostium/assets/js/head-scripts.min.js?v=1471896915579"></script>
+    <script src="//tedbergeron.github.io/themes/ghostium/assets/js/head-scripts.min.js?v=1471897062135"></script>
 
     <link rel="canonical" href="https://tedbergeron.github.io/" />
     <meta name="referrer" content="origin" />
@@ -174,7 +174,7 @@ null
                 <li class="post-item-meta-item">
                   <span class="tags"><i class="fa fa-tags"></i>
                       <span>
-                      <a href="https://tedbergeron.github.io/tag/Asciidoctor/">Asciidoctor]</a></span>
+                      <a href="https://tedbergeron.github.io/tag/Asciidoctor/">Asciidoctor</a></span>
                   </span>
                 </li>
               <li class="post-item-meta-item">
@@ -279,7 +279,7 @@ null
         hljs.initHighlightingOnLoad();
       </script>
 
-    <script src="//tedbergeron.github.io/themes/ghostium/assets/js/foot-scripts.min.js?v=1471896915579"></script>
+    <script src="//tedbergeron.github.io/themes/ghostium/assets/js/foot-scripts.min.js?v=1471897062135"></script>
 
 
   </body>
